# TAO

./: .gitattributes  .gitignore  .travis.yml  Doxyfile  LICENSE.md  Makefile.am  NEWS.md  README.md  TODO.md  bootstrap  configure.ac
andor/: andorcameras.md
andor/src/: .gitignore  Makefile  andor-convert.c  andor-core.c  andor-errors.c  andor-features.c  andor-features.h  andor-server.c  andor-test1.c  andor-test2.c  andor-test3.c  andor-test4.c  andor-test5.c  andor.h
andorcameras/: andorcameras.md
andorcameras/src/: .gitignore  Makefile  andor-core.c  andor-errors.c  andor-features.c  andor-features.h  andor-test1.c  andor-test2.c  andor-test3.c  andorcameras.h
docs/: .gitignore  commands.md  framegrabber.md  implementation.md  sharedobjects.md
julia/: README.md  REQUIRE
libtao/: .gitignore  autogen.sh  configure.ac
libtao/src/: Makefile.am  arrays.c  buffers.c  cameras.c  cmdline.c  common.h  copy.c  errors.c  fitsfiles.c  logmsg.c  macros.h  mutexes.c  sharedarrays.c  sharedobjects.c  tao-fits.h  tao-private.h  tao.h  utils.c
libtao/tools/: getsimdflags
phoenix/: .gitignore  Makefile  TODO.md  coaxpress.h  dump-errors.c  mikrotron-mc408x.c  mikrotron-mc408x.h  phoenix-types.h  phoenix.c  phoenix.h  phx_config.c  phx_info.c  phx_test.c  test-macros.c
src/: .gitignore  Makefile  Makefile.am  buffers.c  cmdline.c  errors.c  sharedarrays.c  sharedobjects.c  tao-private.h  tao.h  test-endian.c  test-fits.c  utils.c  virtualcamera.c
yorick/: Makefile  README.md  TODO.md  configure  tao-rt-start.i  tao-rt-tests.i  tao-rt.i  yor-tao-rt.c
(+41 files in other folders)
