lib_LTLIBRARIES = libtao.la
include_HEADERS = tao.h
libtao_la_SOURCES = \
    arrays.c \
    buffers.c \
    cmdline.c \
    copy.c \
    errors.c \
    fitsfiles.c \
    mutexes.c \
    sharedobjects.c \
    sharedarrays.c \
    cameras.c \
    utils.c \
    macros.h \
    tao-private.h
EXTRA_DIST = intro.txt
